# STM32-Drone

./: CMakeCache.txt  README.md
CMakeTest/: CMakeLists.txt  Makefile
CMakeTest/include/: f103.h
CMakeTest/ldscripts/: stm32f407.ld
CMakeTest/src/: main.cpp
Drone/include/: font.h  main.h  twi.h  usart.h
Drone/src/: Drone.elf  Drone.hex  Makefile  SignalGenerator.elf  main.cpp  main.d  ssd1306.cpp  timer.cpp  timer.d  twi.cpp  twi.d  usart.cpp  usart.d
Kicad/: Drone.csv  Drone.kicad_pcb  Drone.net  Drone.pro  Drone.sch  Drone.sch-bak
Kicad/Gerber/: Drone-F_Cu.gbr  Drone-F_Paste.gbr  Drone-F_SilkS.gbr  Drone-PTH.drl  Drone-job.gbrjob
SigGen/: CMakeLists.txt  readme
SigGen/KiCad/: MCU_Microchip_AVR.lib  _autosave-SigGen.sch  atmega328.sym
SigGen/include/: Rotary.h  ad9833.h  avr_io.h  debug.h  font.h  i2c.h  m328io.h  main.h  spi.h  ssd1306.h  timer.h  twi.h  usart.h
SigGen/src/: Makefile  Rotary.cpp  Rotary.d  SignalGenerator.elf  SignalGenerator.hex  ad9833.cpp  ad9833.d  avr_io.cpp  avr_io.d  debug.cpp  debug.d  i2c.cpp  i2c.d  main.cpp  main.d  oled.d  spi.cpp  spi.d  ssd1306  ssd1306.cpp  ssd1306.d  timer.cpp  twi.cpp  twi.d  usart.cpp  usart.d
Test/: Makefile
Test/Kicad/: Drone-cache.lib  Drone.kicad_pcb-bak  Drone.xml  _autosave-Drone.sch  fp-info-cache
Test/linker/: stm32f103.ld
audioplayer/: Makefile
esp8266/: .directory  CMakeLists.txt  main.sublime-workspace
esp8266/include/: gpio.h  timer.h
esp8266/src/: a.out  gpio.cpp  main.cpp
stm32/: .gdbinit  Makefile  i2c  linkerscript.ld
stm32_drone/: .gdbinit  readme.md
(+124 files in other folders)
